--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,14 @@
-# Main entrypoint of the workflow. 
-# Please follow the best practices: 
-# https://snakemake.readthedocs.io/en/stable/snakefiles/best_practices.html,
-# in particular regarding the standardized folder structure mentioned there. 
+import os
+
+rule all:
+    input:
+        storage.gcs("gs://bkt-dev-prj-dev-rfsci-bio-nonprt-posit-storage-bio/config_austin_slack.yaml")
+    output:
+        storage.gcs("gs://bkt-test-926/logs/test_gcs_snakemake.txt")
+    shell:
+        """
+        cp {input} {output} 
+        """
+
+
+
